--- a/templates/hrv/measures.html
+++ b/templates/hrv/measures.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Measures</title>
-</head>
-<body>
-    <p>{{ measures }}</p>
-</body>
-</html>
+{% extends 'hrv/base.html' %}
+{% load static %}
+{% block body_block %}
+ <h3>Here, you may find your measures...whatever they may be...</h3>
+ 
+{% endblock %}
