--- a/templates/hrv/measures.html
+++ b/templates/hrv/measures.html
@@ -1,6 +1,6 @@
 {% extends 'hrv/base.html' %}
 {% load static %}
 {% block body_block %}
- <h3>Here, you may find your measures...whatever they may be...</h3>
- 
+ <h5>Measures taken directly from your watch</h5>
+
 {% endblock %}
