--- a/templates/hrv/measures.html
+++ b/templates/hrv/measures.html
@@ -2,5 +2,5 @@
 {% load static %}
 {% block body_block %}
  <h5>Measures taken directly from your watch</h5>
-
+ <p>{{ measures }}</p>
 {% endblock %}
