Added feature tp store bpm in csv file

--- a/templates/hrv/base.html
+++ b/templates/hrv/base.html
@@ -31,7 +31,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'hrv:measures' %}">Measures</a>
+                <a class="nav-link" href="{% url 'hrv:post' %}">Measures</a>
               </li>
 
               {% if user.is_authenticated %}
