--- a/templates/hrv/post.html
+++ b/templates/hrv/post.html
@@ -1,6 +1,6 @@
 {% extends 'hrv/base.html' %}
 {% load static %}
 {% block body_block %}
- <h5>Measures taken directly from your watch</h5>
- <p>{{ measures }}</p>
+ <h5>Entries taken directly from your watch</h5>
+ <p>You currently have, {{ entries }} entries!</p>
 {% endblock %}
